# class_django

blog/: db.sqlite3  pyproject.toml
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author_alter_blog_updated_at.py  0003_comment.py  0004_alter_comment_options.py  0005_blog_image.py  0006_blog_thumbnail.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html
blog/templates/registration/: login.html  signup.html
blog/utils/: models.py
